--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -19,11 +19,11 @@
                             <form class = "ui inverted form" method="POST">
                                 {% csrf_token %}
                                 <div class = "two fields">
-                                    <div class="twelve wide field">
+                                    <div class="ten wide field">
                                         <label>Medicine</label>
                                         {{form.medicine}}
                                     </div>
-                                    <div class="four wide field">
+                                    <div class="six wide field">
                                         <label>Type</label>
                                         {{form.med_type}}
                                     </div>
