--- a/unitmanagement/templates/unitmanagement/choose_handler_list.html
+++ b/unitmanagement/templates/unitmanagement/choose_handler_list.html
@@ -1,80 +1,120 @@
 {% extends "profiles/sidebar_um.html" %}
-{% load static %}
+
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header">{{ title }}</h3>
+    <h3 class="ui header">{{ Title }}</h3>
     {% if messages %}
         {% for message in messages %}
-            <div class="{{style}}" > {{ message }}</div>
+            <div class="ui green message" > {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
 
-<div class="ui raised segment">
-    <center>
-            <img src="{{k9.image.url}}" alt="" width="280"> 
-    </center>
-   <table class="ui six column teal celled table">
-       <thead>
-            <tr>
-                <th>Name</th>
-                <td>{{k9.name}}</td>
-                <th>Capability</th>
-                <td>{{k9.capability}}</td>
-                <th>Age</th>
-                <td>{{k9.age}}</td>
-            </tr>
-            <tr>
-                <th>Sex</th>
-                <td>{{k9.sex}}</td>
-                <th>Breed</th>
-                <td>{{k9.breed}}</td>
-                <th>Source</th>
-                <td>{{k9.source}}</td>
-            </tr>
-       </thead>
+<div class="ui segment">
+   <div class='ui grid'>
+        <div class='two column row'>
+            <div class='column'>
+                <table class="ui celled orange table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <td>{{k9.name}}</td>
+                        </tr>
+                        <tr>
+                            <th>Age</th>
+                            <td>{{k9.age}}</td>
+                        </tr>
+                        <tr>
+                            <th>Sex</th>
+                            <td>{{k9.sex}}</td>
+                        </tr>
+                        <tr>
+                            <th>Breed</th>
+                            <td>{{k9.breed}}</td>
+                        </tr>
+                        <tr>
+                            <th>Capability</th>
+                            <td>{{k9.capability}}</td>
+                        </tr>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div class='column'>
+                <center>
+                    <img src="{{k9.image.url}}" alt="" width="280">
+                </center>
+            </div>
 
-   </table>
+        </div>
+   </div>
+
+   <h4 class="ui horizontal divider header">
+        <i class="user icon"></i>
+        Handler
+    </h4>
+
+    <form class = "ui fluid form" method="POST">
+        {% csrf_token %}
+        <div class="ui horizontal segments">
+            <div class="ui segment" style="width:5%">
+                <table class="ui celled inverted orange table" id = 'tabledata'>
+                    <thead>
+                        <th class="three wide"></th>
+                        <th>Name</th>
+                        <th class="three wide">K9 {{k9.capability}} Handled</th>
+                    </thead>
+                    <tbody>
+                        {% for a in form.handler %}
+                        {% for g in g%} {% if forloop.counter == forloop.parentloop.counter %}
+                        <tr>
+                            <td class="center aligned">{{a.tag}}</td>
+                            <td>{{a.choice_label}}</td>
+                            <td>{{g}}</td>
+                        </tr>
+                        {%endif%}{% endfor %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        
+            <div class="ui segment" id='id_handler_data' style="width:5%">
+                
+            </div>
+        </div>
+
+        <div class="ui center aligned basic segment" style="padding: 0px;">
+            <button id = "submit" class = "ui button green" type="submit" >Submit</button>
+        </div>
+
+    </form>
 </div>
 
-<table id="tabledata1" class="ui six column celled table">
-        <thead>
-            <tr>
-                <th>Handler</th>
-                <th>Sex</th>
-                <th>Age</th>
-                <th>City</th>
-                <th>{{k9.capability}} Handled</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for data1, data2, data3 in zippedList %}
-            <tr>
-                <td>{{data1.fullname}}</td>
-                <td>{{data1.gender}}</td>
-                <td>{{data1.age}}</td>
-                <td>{{data2.city}}</td>
-                <td>{{data3}}</td>
-                <td style="text-align:center;">
-                    <a class="ui tiny blue button" href="{% url 'unitmanagement:choose_handler' data1.id %}">Choose</a>
-                </td>
-            </tr>
-            
-            {% endfor %}
-        </tbody>
-    </table>
-
-
 <script type="text/javascript">
-        
+
     $(document).ready(function() {
-        $('.menu .item').tab();
-        $('#tabledata1').DataTable( {
-        "order": [[ 4, "desc" ]]
+        $('#tabledata').DataTable({
+        "order": [[ 2, "desc" ]]
         });
     });
-    
 </script>
 
-{% endblock %}
+<script>
+    $("input[name='handler']").change(function () {
+      var url = 'ajax_load_handler';  // get the url of the `load_handler` view
+      var handlerId = $("input[name='handler']:checked"). val(); // get the selected handler ID from the HTML input
+
+      $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-handler/)
+        data: {
+          'handler': handlerId       // add the handler id to the GET parameters
+        },
+        success: function (data) {   // `data` is the return of the `load_handler` view function
+          $("#id_handler_data").html(data);  // replace the contents of the #id_handler_data input with the data that came from the server
+        }
+      });
+
+    });
+  </script>
+
+ {% endblock %}
