--- a/unitmanagement/templates/unitmanagement/health_record.html
+++ b/unitmanagement/templates/unitmanagement/health_record.html
@@ -57,7 +57,9 @@
 <script type="text/javascript">
         
     $(document).ready(function() {
-        $('#tabledata').DataTable();
+        $('#tabledata').DataTable({
+        "order": [[ 0, "asc" ]]
+        });
     } );
     
 </script>
