--- a/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
+++ b/unitmanagement/templates/unitmanagement/k9_unpartnered_list.html
@@ -9,63 +9,32 @@
         {% endfor %}
     {% endif %}
 </div>
-<div class="ui top attached tabular menu">
-    <a class="item active" data-tab="first">Unpartnered</a>
-    <a class="item" data-tab="second">Handler On-Leave</a>
-</div>
-<div class="ui tab segment active" data-tab="first">
-    <table id="tabledata1" class="ui five column celled table">
-        <thead>
+<table id="tabledata1" class="ui six column celled table">
+    <thead>
+        <tr>
+            <th>K9</th>
+            <th>Breed</th>
+            <th>Age</th>
+            <th>Sex</th>
+            <th>Capability</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data in data %}
             <tr>
-                <th>K9</th>
-                <th>Microchip</th>
-                <th>Breed</th>
-                <th>Age</th>
-                <th>Capability</th>
+                <td>{{data.name}}</td>
+                <td>{{data.breed}}</td>
+                <td>{{data.age}}</td>
+                <td>{{data.sex}}</td>
+                <td>{{data.capability}}</td>
+                <td>
+                    <a class = 'ui blue tiny basic button' href="{% url 'unitmanagement:choose_handler_list' data.id %}">Select</a>
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            {% for data in data %}
-                <tr>
-                    <td>
-                        <a href="{% url 'unitmanagement:choose_handler_list' data.id %}">{{data.name}}</a>
-                    </td>
-                    <td>{{data.microchip}}</td>
-                    <td>{{data.breed}}</td>
-                    <td>{{data.age}}</td>
-                    <td>{{data.capability}}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
-
-<div class="ui tab segment" data-tab="second">
-    <table id="tabledata2" class="ui five column celled table">
-        <thead>
-            <tr>
-                <th>K9</th>
-                <th>Microchip</th>
-                <th>Breed</th>
-                <th>Age</th>
-                <th>Capability</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for data in data2 %}
-                <tr>
-                    <td>
-                        <a href="{% url 'unitmanagement:choose_handler_list' data.id %}">{{data.name}}</a>
-                    </td>
-                    <td>{{data.microchip}}</td>
-                    <td>{{data.breed}}</td>
-                    <td>{{data.age}}</td>
-                    <td>{{data.capability}}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+        {% endfor %}
+    </tbody>
+</table>
 
 <script type="text/javascript">
         
